# msk-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml
src/: main.py
src/msk_custom_domain/: __init__.py  server.py
src/msk_mm2_mcp_server/: __init__.py  server.py
tests/: __init__.py  test_basic.py
