[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msk-mcp-server"
version = "0.1.5"
description = "A Model Context Protocol server for Amazon MSK"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "yhyyz", email = "m18311283082@google.com"}
]
dependencies = [
    "boto3>=1.38.31",
    "botocore>=1.38.31",
    "mcp>=1.9.3",
    "fastmcp>=2.7.0"
]

[project.scripts]
msk-mcp-server = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["msk_custom_domain*", "msk_mm2_mcp_server*"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
